package structural.decorator;

public abstract class PlayerDecorator {
    protected Character character;

    public abstract void printPlayerSummary();
}
